--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "inspire-tree-dom-es5",
   "version": "1.0.0",
   "scripts": {
-    "build": "babel src -d dist"
+    "build": "babel --plugins lodash --presets env src -d dist"
   },
   "description": "",
   "main": "index.js",
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/dhatim/inspire-tree-dom-es5#readme",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.0"
+    "babel-plugin-lodash": "^3.2.11",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
